<resources>
    <string name="app_name">VibeCheck</string>
    <string-array name="mood_options">
        <item>Anger</item>
        <item>Confusion</item>
        <item>Disgust</item>
        <item>Fear</item>
        <item>Happiness</item>
        <item>Sadness</item>
        <item>Shame</item>
        <item>Surprise</item>
    </string-array>

    <string-array name="social_options">
        <item>N/A</item>
        <item>Alone</item>
        <item>One-to-One</item>
        <item>Small Group</item>
        <item>Large Audience</item>
    </string-array>

    <!-- Navigation menu strings -->
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_post">Post</string>
    <string name="title_map">Map</string>
    <string name="title_profile">Profile</string>
    <string name="title_user_mood_event_display">User Mood Event Display"</string>
    <string name="title_my_mood_event_display">My Mood Event Display"</string>
    <string name="title_add_mood_event">Create Mood Event</string>
    <string name="title_mood_history">Mood History</string>
    <string name="title_activity_mood_map">MoodMapActivity</string>

    <!-- add api key below -->
    <string name="google_maps_key">AIzaSyDOvapion_glRNHcgncyCqoQSZrpoR28Lc</string>

</resources>