<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/history_icon"
        android:title="@string/title_history" />
    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/add_post_icon"
        android:title="@string/title_post" />

    <!-- profile by seerat
        android:id="@+id/nav_profile"
        android:icon="@drawable/home"
        android:title="History" />
-->
    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/map_icon"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/title_profile" />

</menu>


<!--
settings nav by seerat, add to profile instead I think?
<item
        android:id="@+id/nav_settings"
        android:icon="@drawable/home"
        android:title="Profile" />
-->