<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.vibecheck.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_screen" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_history"
            app:destination="@id/navigation_history" />
        <action
            android:id="@+id/action_home_to_myMoodDisplay"
            app:destination="@id/myMoodDisplayFragment" />

        <action
            android:id="@+id/action_home_to_userMoodDisplay"
            app:destination="@id/userMoodDisplayFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.vibecheck.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/mood_history" >
        <action
            android:id="@+id/action_navigation_history_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/myMoodDisplayFragment"
        android:name="com.example.vibecheck.ui.viewmoodevents.MyMoodDisplayFragment"
        android:label="@string/title_my_mood_event_display"
        tools:layout="@layout/my_mood_display_view">
        <action
            android:id="@+id/action_myMoodDisplayFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_myMoodDisplayFragment_to_navigation_edit_mood_event"
            app:destination="@id/navigation_EDITMYMOODEVENT,CHANGETHISLATER" />
    </fragment>

    <fragment
        android:id="@+id/userMoodDisplayFragment"
        android:name="com.example.vibecheck.ui.viewmoodevents.UserMoodDisplayFragment"
        android:label="@string/title_user_mood_event_display"
        tools:layout="@layout/user_mood_display_view">
        <action
            android:id="@+id/action_userMoodDisplayFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

</navigation>